and product exmaple to product enpoint
